fix header image size on mobile, fix footer position

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
   #heroImg {
     display: block;
     max-width: 100%;
-    height: 100%;
+    /* height: 100%; */
   }
 
   #accentLayer {
@@ -239,8 +239,9 @@ body {
 }
 
 .attribution {
-    position: absolute;
+    position: relative;
     bottom: 0;
+    margin-top: 1rem;
   text-align: center;
   font-size: 1rem;
   color: var(--color-cardBg-darkDesaturatedBlue);
